force-app/main/default/objects/Placement__c/Placement__c.object-meta.xml
<CustomObject>
    <label>Placement</label>
    <nameField>
        <label>Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>