force-app/main/default/objects/Placement__c/fields/Billing_period__c.field-meta.xml
<CustomField>
    <fullName>Billing_period__c</fullName>
    <label>Billing period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_period</valueSetName>
    </valueSet>
</CustomField>