force-app/main/default/objects/Placement__c/fields/Hours_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_Week__c</fullName>
    <label>Hours per Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>