force-app/main/default/objects/Placement__c/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Clients contact can be selected as Invoice Contact</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <infoMessage>Select Invoice Contact associated with the Client</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements (Invoice Contact)</relationshipLabel>
    <relationshipName>Placements_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>