force-app/main/default/objects/Placement__c/fields/LegacyAccountID__c.field-meta.xml
<CustomField>
    <fullName>LegacyAccountID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyAccountID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>