force-app/main/default/objects/Placement__c/fields/LegacyContactID__c.field-meta.xml
<CustomField>
    <fullName>LegacyContactID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyContactID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>