force-app/main/default/objects/Placement__c/fields/LegacyJob__c.field-meta.xml
<CustomField>
    <fullName>LegacyJob__c</fullName>
    <externalId>true</externalId>
    <label>LegacyJobID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>