force-app/main/default/objects/Placement__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Managers from Client can be selected</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <infoMessage>Select Client Manager Contact</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements (Manager)</relationshipLabel>
    <relationshipName>Placements_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>