force-app/main/default/objects/Placement__c/fields/Rate_Client__c.field-meta.xml
<CustomField>
    <fullName>Rate_Client__c</fullName>
    <label>Rate Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>